--- a/src/scss/partials/_about-news.scss
+++ b/src/scss/partials/_about-news.scss
@@ -17,27 +17,23 @@
     margin-bottom: -1px;
     padding: 25px 40px 20px 40px;
     &--rowspan {
-        display:block;
+        display: block;
     }
-
-
     @media screen and (max-width: 992px) {
+        align-items: center;
         padding: 15px 15px 15px 15px;
     }
 }
 
 .about-news__subrow {
-    display:flex;
-    margin-bottom:10px;
-
-    @media screen and (max-width:767px) {
-        margin-bottom:20px;
+    display: flex;
+    margin-bottom: 10px;
+    @media screen and (max-width: 767px) {
+        margin-bottom: 20px;
     }
-
     &:last-child {
-         margin-bottom:0;
+        margin-bottom: 0;
     }
-
 }
 
 .about-news__title {
@@ -52,7 +48,7 @@
 .about-news__content {
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     width: 100%;
     @media screen and (max-width: 1200px) {
         display: block;
@@ -69,7 +65,8 @@
     }
 }
 
-.about-news__link,
+.about-news__link--prev,
+.about-news__link--next,
 .about-news__text {
     @media screen and (max-width: 1200px) {
         white-space: nowrap;
@@ -82,9 +79,19 @@
 }
 
 .about-news__link {
-    display: block;
-    width: 100%;
     position: relative;
+     @media screen and (max-width: 1200px) {
+        white-space: nowrap;
+        word-wrap: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        @include font-size(14px, 1);
+    }
+    &--prev,
+    &--next {
+        display: block;
+        width: 100%;
+    }
     &--prev::after {
         display: block;
         position: absolute;
@@ -120,6 +127,7 @@
 }
 
 .about-news__downoload {
+    margin-left: auto;
     @media screen and (max-width: 1200px) {
         position: absolute;
         top: 50%;
