--- a/src/scss/partials/_news-room.scss
+++ b/src/scss/partials/_news-room.scss
@@ -1,6 +1,13 @@
 /*================================
 =            news-room            =
 ================================*/
+.news-room {
+    padding: 70px 0px;
+
+    @media screen and (max-width:767px) {
+        padding: 20px 0px;
+    }
+}
 
 .news-room__wrap {
     position: relative;
