делает страницу списка авто

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -71,4 +71,7 @@
 @import "partials/_news.scss";
 @import "partials/_news-area.scss";
 @import "partials/_text-block.scss";
+@import "partials/_auto-list.scss";
+@import "partials/_card-product.scss";
+@import "partials/_trade-in.scss";
 
