--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
 @import "vendor/_jquery.formstyler.scss";
 @import "vendor/_slick.scss";
 @import "vendor/_jquery-ui.scss";
+@import "vendor/_lightgallery.scss";
 
 @import "partials/_page-wrapper.scss";
 @import "partials/_page-container.scss";
@@ -72,6 +73,6 @@
 @import "partials/_news-area.scss";
 @import "partials/_text-block.scss";
 @import "partials/_auto-list.scss";
-@import "partials/_card-product.scss";
 @import "partials/_trade-in.scss";
+@import "partials/_auto-slider.scss";
 
