--- a/src/scss/partials/_downoload-btn.scss
+++ b/src/scss/partials/_downoload-btn.scss
@@ -2,7 +2,7 @@
 =            downoload-btn            =
 =====================================*/
 .downoload-btn {
-	@include font-size(14px,1);
+	@include font-size(14px,28px);
 	@include hyundai(medium);
 	position:relative;
 	padding-left: 23px;
